--- a/index.html
+++ b/index.html
@@ -119,13 +119,10 @@
       <h3>Vehicle Examples</h3>
       <p class="muted">SUVs, trucks, vans, and cars — we’ll match you to the right vehicle and protect your tax exemption. Inventory changes daily.</p>
 
-      <figure class="card" style="overflow:hidden">
-        <!-- Upload a neutral composite image here -->
-        <img src="assets/vehicles/generic-vehicles-banner.jpg"
-             alt="Example vehicles — car, SUV, and truck"
-             loading="lazy" decoding="async"
-             style="width:100%;height:auto;display:block;object-fit:cover;">
-      </figure>
+      <figure class="vehicle-banner">
+  <img src="assets/vehicles/generic-vehicles-banner.jpg" alt="Example vehicles — car, SUV, and truck" loading="lazy" decoding="async">
+</figure>
+
 
       <ul class="pill-list" style="margin-top:12px">
         <li>Large selection (cars • SUVs • trucks • vans)</li>
