--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <p class="muted">SUVs, trucks, vans, and cars — we’ll match you to the right vehicle and protect your tax exemption. Inventory changes daily.</p>
 
       <figure class="vehicle-banner">
-  <img src="assets/cuv.png"
+  <img src="CCL_BG.webp"
        alt="Crossover SUV example"
        width="556" height="233"
        loading="lazy" decoding="async">
