--- a/index.html
+++ b/index.html
@@ -119,12 +119,14 @@
       <h3>Vehicle Examples</h3>
       <p class="muted">SUVs, trucks, vans, and cars — we’ll match you to the right vehicle and protect your tax exemption. Inventory changes daily.</p>
 
-      <figure class="vehicle-banner">
-  <img src="CCL_BG.webp"
-       alt="Crossover SUV example"
-       width="556" height="233"
-       loading="lazy" decoding="async">
+     <figure class="vehicle-banner">
+  <img
+    src="assets/vehicle-lineup-banner.webp"
+    alt="Lineup of vehicles including Toyota, Honda, GMC, Dodge, and more"
+    width="1600" height="410"
+    loading="lazy" decoding="async">
 </figure>
+
 
 
       <ul class="pill-list" style="margin-top:12px">
