--- a/index.html
+++ b/index.html
@@ -11,7 +11,170 @@
   <meta property="og:image" content="assets/justine-smoke-hero.jpg">
   <link rel="icon" href="assets/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Turtle Island Financing — Transparent Indigenous Auto Financing</title>
+  <meta name="description" content="Indigenous-owned, CCAB-certified. Transparent financing that honors your rights, protects your tax exemption, offers remote approvals and home delivery. Exclusive partnership with TRC-trained Pioneer Auto.">
+  <meta property="og:title" content="Turtle Island Financing — Truth in Financing">
+  <meta property="og:description" content="Trust and Protection comes from Turtle Island Financing. Exclusive TRC-trained partner (Pioneer Auto), remote approvals, home delivery, and 1,000+ vehicles sold annually.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="assets/justine-smoke-hero.jpg">
+  <link rel="icon" href="assets/favicon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Header -->
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="/">
+        <img class="logo" src="assets/hero-art.svg" alt="Turtle Island Financing logo" height="40">
+        <div class="brand-text">
+          <h1>Turtle Island Financing</h1>
+          <p class="tag">Indigenous-Owned • CCAB Certified</p>
+        </div>
+      </a>
+      <nav class="top-nav">
+        <a class="btn link" href="/supports.html">Supports</a>
+        <!-- Removed Verify and Dealers -->
+        <a class="btn ghost" href="#apply">Apply Now</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <div class="container hero-grid">
+      <div class="hero-copy">
+        <h2>Protect Your Tax Exemption. Protect Your Savings.</h2>
+        <p class="slogan"><strong>Trust and Protection comes from Turtle Island Financing.</strong> No gimmicks. No pressure. Just transparent financing that honors your rights.</p>
+        <p>
+          Turtle Island Financing operates together with our <strong>exclusive dealership partner, Pioneer Auto (Maple Ridge)</strong> — TRC-trained and certified under our <strong>BAG Indigenous Knowledge &amp; History</strong> program. As one team, we offer one of the Lower Mainland’s largest inventories, a full service &amp; parts department, and a track record of <strong>1,000+ vehicle sales every year</strong>.
+          <br><br>
+          Prefer to shop from home? We can complete your deal <strong>remotely</strong> and <strong>deliver your vehicle</strong> to you for a comfortable, stress-free experience.
+        </p>
+        <div class="hero-ctas">
+          <a class="btn" href="#apply">Protect My Savings → Check If I Qualify</a>
+        </div>
+        <ul class="pill-list">
+          <li>CCAB Certified</li>
+          <li>Trauma-informed &amp; OCAP®-trained</li>
+          <li>Exclusive TRC-trained dealership partner</li>
+          <li>Respectful tax-exemption handling</li>
+          <li>Remote approvals &amp; home delivery</li>
+        </ul>
+      </div>
+      <figure class="hero-art">
+        <img src="assets/justine-smoke-hero.jpg" alt="Justine Smoke — Client Care Director at Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
+        <figcaption class="hero-caption">
+          Meet <strong>Justine Smoke</strong>, Client Care Director — trauma-informed, OCAP® certified, 15 years serving Indigenous communities.
+        </figcaption>
+      </figure>
+    </div>
+  </section>
+
+  <!-- Truth in Financing -->
+  <section id="truth" class="truth-in-financing">
+    <div class="container">
+      <h3>Truth in Financing: Unaffiliated Dealer vs. Turtle Island Financing</h3>
+      <p class="muted">How some unaffiliated dealers inflate your loan vs. how we protect your savings and rights.</p>
+      <table class="comparison">
+        <thead>
+          <tr><th>Line Item</th><th>Unaffiliated Dealer</th><th>Turtle Island Financing</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>Vehicle Price</td><td>$25,000</td><td>$25,000</td></tr>
+          <tr><td>Fees (doc + finance)</td><td>$1,090</td><td>$1,090</td></tr>
+          <tr><td>Taxes (GST+PST)</td><td>$3,129.80</td><td>$0 (Exempt)</td></tr>
+          <tr><td>Add-Ons / Cash Back</td><td>$4,780</td><td>$0 (optional)</td></tr>
+          <tr><td><strong>Amount Financed</strong></td><td><strong>$34,000</strong></td><td><strong>$26,090</strong></td></tr>
+          <tr><td>Monthly Payment (60mo @10%)</td><td>$722</td><td>$554</td></tr>
+          <tr><td><strong>Total of Payments</strong></td><td><strong>$43,320</strong></td><td><strong>$33,240</strong></td></tr>
+          <tr><td>Total Interest Paid</td><td>$9,320</td><td>$7,150</td></tr>
+        </tbody>
+      </table>
+      <div class="cta-center">
+        <a class="btn wide" href="#apply">Protect My Savings → Check If I Qualify</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Why Choose / Trust -->
+  <section class="why-choose">
+    <div class="container">
+      <h3>Why Choose Turtle Island Financing?</h3>
+      <ul class="checklist">
+        <li>✅ Indigenous-owned and proudly <strong>CCAB Certified</strong></li>
+        <li>✅ Trauma-informed &amp; <strong>OCAP®-trained</strong> staff safeguard your data</li>
+        <li>✅ Exclusive partnership with <strong>Pioneer Auto (Maple Ridge)</strong> — TRC-trained and certified under Turtle Island’s BAG Indigenous Knowledge &amp; History program</li>
+        <li>✅ One of the Lower Mainland’s largest used vehicle inventories (cars, trucks, SUVs, vans)</li>
+        <li>✅ Full service &amp; parts centre (OK Tire)</li>
+        <li>✅ <strong>1,000+ vehicles sold annually</strong> — proven dealership experience</li>
+        <li>✅ Remote approvals and home delivery options</li>
+      </ul>
+
+      <blockquote class="testimonial" style="margin-top:1rem">
+        “I felt safe applying here because I knew my tax exemption wouldn’t be hidden in the numbers. Turtle Island handled everything with respect and connected me with the right vehicle.”
+        <br><span class="muted small">— Community Member</span>
+      </blockquote>
+    </div>
+  </section>
+
+  <!-- Vehicle Examples -->
+  <section class="inventory">
+    <div class="container">
+      <h3>Vehicle Examples</h3>
+      <p class="muted">SUVs, trucks, vans, and cars — we’ll match you to the right vehicle and protect your tax exemption. Inventory changes daily.</p>
+
+      <figure class="vehicle-banner">
+        <picture>
+          <source srcset="assets/CCL_BG.webp" type="image/webp">
+          <img src="assets/CCL_BG.webp" 
+               alt="Lineup of vehicles including Toyota, Honda, GMC, Dodge, and more"
+               width="1600" height="410"
+               loading="lazy" decoding="async">
+        </picture>
+      </figure>
+
+      <ul class="pill-list" style="margin-top:12px">
+        <li>Large selection (cars • SUVs • trucks • vans)</li>
+        <li>Tax-exempt eligible deals</li>
+        <li>Remote approvals &amp; delivery anywhere</li>
+      </ul>
+
+      <div class="cta-center" style="margin-top:1rem">
+        <a class="btn" href="#apply">See Options → Check If I Qualify</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Apply (Two-Step Form) -->
+  <!-- (rest of your apply section unchanged from last version) -->
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="container foot">
+      <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong><br>
+      <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span><br>
+      <em>Trust and Protection comes from Turtle Island Financing.</em></p>
+      <nav>
+        <a href="#apply">Apply</a>
+        <a href="/supports.html">Supports</a>
+        <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
+        <a href="#" onclick="window.alert('Privacy: Your information is safeguarded and used only for arranging financing.'); return false;">Privacy</a>
+      </nav>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
