--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         </ul>
       </div>
       <figure class="hero-art">
-        <img src="assets/justine-smoke-hero.jpg" alt="Justine Smoke — Client Care Director at Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
+        <img src="assets/justine-smoke-hero.jpg" alt="Justine Smoke — Managing Director, Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
         <figcaption class="hero-caption">
-          Meet <strong>Justine Smoke</strong>, Client Care Director — trauma-informed, OCAP® certified, 15 years serving Indigenous communities.
+          Meet <strong>Justine Smoke</strong>, Managing Director, Turtle Island Financing — trauma-informed, OCAP® certified, 15 years serving Indigenous communities.
         </figcaption>
       </figure>
     </div>
@@ -162,7 +162,7 @@
             </div>
             <div class="row">
               <label>Email*<input type="email" name="email" required></label>
-              <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 604-555-0123"></label>
+              <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 778-716-8488"></label>
             </div>
             <div class="row">
               <label>Seeking<select name="seeking">
@@ -226,7 +226,9 @@
           <img src="assets/justine-smoke-hero.jpg" alt="Portrait of Justine Smoke" width="80" height="80" style="border-radius:999px;object-fit:cover">
           <div>
             <strong>Justine Smoke</strong><br>
-            <span class="muted small">Client Care Director — trauma-informed, OCAP® certified, 15 years serving Indigenous communities</span>
+            <span class="muted small">Managing Director, Turtle Island Financing — trauma-informed, OCAP® certified, 15 years serving Indigenous communities</span><br>
+            <a href="mailto:turtleislandfinancing@gmail.com">turtleislandfinancing@gmail.com</a><br>
+            <a href="tel:+17787168488">778-716-8488</a>
           </div>
         </div>
 
@@ -247,10 +249,14 @@
       <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong><br>
       <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span><br>
       <em>Trust and Protection comes from Turtle Island Financing.</em></p>
+      <p>
+        Contact: <a href="mailto:turtleislandfinancing@gmail.com">turtleislandfinancing@gmail.com</a> | 
+        <a href="tel:+17787168488">778-716-8488</a>
+      </p>
       <nav>
         <a href="#apply">Apply</a>
         <a href="/supports.html">Supports</a>
-        <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
+        <a href="#" onclick="window.alert('Email: turtleislandfinancing@gmail.com'); return false;">Contact</a>
         <a href="#" onclick="window.alert('Privacy: Your information is safeguarded and used only for arranging financing.'); return false;">Privacy</a>
       </nav>
     </div>
