--- a/index.html
+++ b/index.html
@@ -192,7 +192,11 @@
 
         <div class="ccab-badge" style="margin-top:16px">
           <img src="assets/CIB-LogoH-Colour (1).png" alt="Certified Aboriginal Business (CAB) — CCAB" height="52">
-          <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
+          <div class="ccab-text">
+            <strong>Certified Aboriginal Business (CAB)</strong><br>
+            Verified by the Canadian Council for Aboriginal Business (CCAB)<br>
+            <em>Turtle Island Financing is operated under Brooke Ashley Group Inc., a CAB-verified Indigenous business.</em>
+          </div>
         </div>
       </aside>
     </div>
